using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class AnimationStrings
{
    internal const string isMoving ="isMoving";
    internal const string isRunning= "isRunning";
    internal const string isGrounded = "isGrounded";
    internal const string yVelocity = "yVelocity";
    internal const string isJumping = "isJumping";
    internal const string isOnWall = "isOnWall";
    internal const string isOnCeiling = "isOnCeiling";
    internal const string attack = "attack";
    internal const string canMove = "canMove";

}
